// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading has a valid snapshot 1`] = `
<div
  className="button-search"
>
  Loading... 
</div>
`;

exports[`SearchButton has a valid snapshot 1`] = `
<button
  className=""
  type="submit"
>
  Search button
</button>
`;

exports[`SearchButtonWithLoading has a valid snapshot 1`] = `
<button
  className=""
  type="button"
>
  Search button
</button>
`;
